# ML-Python

LR-1/: Медицинское_страхование.ipynb  Пример-Цены_на_Audi.ipynb
LR-3/: Lab3_DecisionTree_VoiceGender.ipynb
LR-6/: .gitignore  README.md  info.md  pyproject.toml  report.md  time_series_analysis.py
LR-6/data/: book_orders.csv
deep/LR-3/: README.md  neural_network.py  test_network.py
