[tool.poetry]
name = "lr-6"
version = "0.1.0"
description = "Laboratory work 6"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.0"
jupyter = "^1.0.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 